--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ cache:
   directories:
   - node_modules
 script:
-  - yarn install
+  - cd test-app
+  - npm install
   - npm test
   on:
     branch: master
