--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,12 @@
-# Bahasa yang digunakan oleh aplikasi kita
-# Node JS digunakan untuk menjalankan javascript di dalam server
 language: node_js
-# Versi Node JS yang akan di install oleh sistem travis-ci
-# Pada saat pembuatan gist ini versi 10 lah versi yang paling stabil
 node_js:
-  - '10'
-# Cache digunakan untuk menyimpan data yang sudah di build sebelumnya
-# Jika tidak ada perubahan
-# Dengan memasukan cache seperti ini
-# Kita tidak akan menginstal dependensi aplikasi
-# setiap kali melakukan push jika tidak ada perubahan yang terjadi
+  - "stable"
 cache:
-  yarn: true
   directories:
-    - node_modules
-# script ini yang akan dijalankan oleh travis-ci
-# yang menentukan apakah code kita sudah pass test atau belum
+  - node_modules
 script:
-  - yarn install
-  - yarn test
-# Syntax yang akan dijalnkan sebelum melakukan deployment
+  - cd pokedex
+  - npm install
+  - npm test
   on:
     branch: master
