--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,25 @@
+
 language: node_js
+
 node_js:
-  - "stable"
+  - '10'
+# Cache digunakan untuk menyimpan data yang sudah di build sebelumnya
+# Jika tidak ada perubahan
+# Dengan memasukan cache seperti ini
+# Kita tidak akan menginstal dependensi aplikasi
+# setiap kali melakukan push jika tidak ada perubahan yang terjadi
 cache:
+  yarn: true
   directories:
-  - node_modules
+    - node_modules
+# script ini yang akan dijalankan oleh travis-ci
+# yang menentukan apakah code kita sudah pass test atau belum
 script:
-  - cd pokedex
-  - npm install
-  - npm test
+  - yarn
+  - yarn test
+# Syntax yang akan dijalnkan sebelum melakukan deployment
+before_deploy:
+  - yarn run build
+# Konfigurasi yang akan digunakan travis Ci untuk menjalankan deployment
   on:
     branch: master
